--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,4 @@
 compile.on.save=true
-file.reference.jcalendar-1.4.jar=C:\\Users\\Propietario\\Desktop\\Proyecto-Final-Grupo-5
-file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Propietario\\Desktop\\Proyecto-Final-Grupo-5
-file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Users\\Propietario\\Desktop\\Proyecto-Final-Grupo-5
+file.reference.jcalendar-1.4.jar=C:\\Users\\Propietario\\Desktop\\Proyecto-Final-Grupo-5-master\\HotelIdeal\\lib\\jcalendar-1.4.jar
+file.reference.mariadb-java-client-2.3.0.jar-3=C:\\Users\\Propietario\\Desktop\\Proyecto-Final-Grupo-5-master\\HotelIdeal\\lib\\mariadb-java-client-2.3.0.jar
 user.properties.file=C:\\Users\\Propietario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
